# nocturne-optimizer

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  models.rs  state.rs
src-tauri/src/services/: mod.rs  monitor.rs  offline.rs  registry_audit.rs  security.rs  startup.rs  windows.rs
src/api/: tauri.ts
src/components/: AppPasswordGate.tsx  DesktopHud.tsx  GuardOverlay.tsx  HudPanel.tsx  MetricGauge.tsx  ProcessIcon.tsx  Sidebar.tsx
src/lib/: tauri.ts
