[package]
name = "nocturne_optimizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "nocturne_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30"
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
